--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "michelf/php-markdown": "^1.8",
+        "michelf/php-smartypants": "^1.8"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
