--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "michelf/php-markdown": "^1.8",
-      "michelf/php-smartypants": "^1.8",
-      "suin/php-rss-writer": "^1.6"
+        "michelf/php-smartypants": "^1.8",
+        "predis/predis": "^1.1",
+        "suin/php-rss-writer": "^1.6"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
